--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Boris Meinardus"
+  name             : "Sayeed Meinardus"
   avatar           : "Profile_pic2.png"
   bio              : "Multi-Modal Learning \n under Prof. Marcus Rohrbach"
   location         : "Berlin/ Darmstadt, Germany"
