--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Sayeed Shafayet Chowdhury"
-  avatar           : "Profile_pic.jpg"
+  avatar           : "sayeed.png"
   bio              : "Energy-efficient ML at Purdue \n under Prof. Kaushik Roy"
   location         : "West Lafayette, Indiana, USA"
   employer         : "Purdue University"
