--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,8 +1,8 @@
 # main links links
 main:
-  - title: "CV"
+  - title: "Resume"
     # url: /cv/
-    url: /files/Resume.pdf
+    url: /files/Sayeed_resume.pdf
 
   - title: "Portfolio"
     url: /portfolio/
