--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,7 @@ main:
     # url: /cv/
     url: /files/Sayeed_resume.pdf
 
-  - title: "Portfolio"
+  - title: "Research Projects"
     url: /portfolio/
   
   - title: "Publications"
