--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,7 +5,7 @@ main:
     url: /files/Sayeed_resume.pdf
 
   - title: "Research Projects"
-    url: /portfolio/
+    url: /projects/
   
   - title: "Publications"
     url: /publications/
