--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Sayeed Shafayet Chowdhury"
   avatar           : "sayeed.png"
-  bio              : "Energy-efficient ML at Purdue \n under Prof. Kaushik Roy"
+  bio              : "Phd candidate in ML at Purdue \n under Prof. Kaushik Roy"
   location         : "West Lafayette, Indiana, USA"
   employer         : "Purdue University"
   pubmed           : 
